# vrc-ai-agent

./: .env.example  .gitignore  README.md  THIRD_PARTY_LICENSES.md  main.py  prompts.py  pyproject.toml
actuators/: chat_box.py  movement.py  speech.py
agent/: graph.py  llm.py  memory_utils.py  state.py
agent/core/: context.py  main.py
agent/nodes/: action.py  inject_context.py  think.py
core/: context.py  osc_client.py  types.py
inputs/: audio.py  speaker_store_sqlite.py  stt_faster_whisper.py  vision.py
memory/: memory.py
prompts/: charactor.txt.sample  prompts.py
scripts/: list_devices.py  manual_test_tts.py  manual_test_vad_stt.py
tests/: conftest.py  manual_test_chat_box.py  manual_test_day_summary.py  manual_test_trim.py  manual_test_tts.py  manual_test_vad_stt.py  manual_test_vision.py  test_chat_box.py  test_context.py  test_graph.py  test_interrupt.py  test_main_logic.py  test_memory_integration.py  test_memory_utils_prompt.py  test_retry.py  test_speaker_gate.py  test_speech.py  test_state.py  test_stt.py
utils/: audio.py  list_devices.py  manual_register_speaker.py
