[project]
name = "vrc-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "langchain",
    "litellm",
    "faster-whisper",
    "python-dotenv",
    "loguru",
    "langchain-litellm>=0.5.1",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]
