[project]
name = "vrc-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "langchain",
    "litellm",
    "faster-whisper",
    "python-dotenv",
    "loguru",
    "langchain-litellm>=0.5.1",
    "langchain-core>=1.2.16",
    "requests>=2.32.5",
    "tiktoken",
    "transformers",
    "aiavatar",
    "resemblyzer",
    "setuptools>=82.0.0",
    "mcp>=1.26.0",
    "python-osc>=1.9.3",
    "SpoutGL",
    "pillow",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
aiavatar = { path = "./lib/aiavatarkit" }
